--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/aws-unity-web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/aws-unity-web.data.gz",
-        frameworkUrl: buildUrl + "/aws-unity-web.framework.js.gz",
-        codeUrl: buildUrl + "/aws-unity-web.wasm.gz",
+        dataUrl: buildUrl + "/aws-unity-web.data",
+        frameworkUrl: buildUrl + "/aws-unity-web.framework.js",
+        codeUrl: buildUrl + "/aws-unity-web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Appulab",
         productName: "AWS WebRequest",
